syntax = "proto3";

package im.ghasedak.api;

option java_package = "im.ghasedak.api.contact";
option java_multiple_files = true;

message ApiContactRecord {
    oneof contact {
        int64 phone_number = 1;
        string email = 2;
        string nickname = 3;
    }
}